Adjust width to fix spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ h1, h2, p {
 
 #weather-page {
   padding: 30px;
-  width: 90vw;
+  width: 95%;
   height: 95vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
